Added JAVA_OPTS environment variable (in order to be able to define XmS XmX & maxPermSize) - default 1024m 1024m & 256m like before